add media coverage

--- a/index.html
+++ b/index.html
@@ -145,23 +145,23 @@ a textech let tam zdůrazňuje mamut, jinak rané region.</p>
 							<img src="img/logos/csob-logo.svg">
 						</div>
 -->
-						<div class="cell logo-fundlift">
-							<img src="img/logos/fundlift-logo.svg">
+						<div class="cell ct24-logo">
+							<img src="img/ct24.png">
 						</div>
-						<div class="cell logo-jack">
-							<img src="img/logos/jack-logo.svg">
+						<div class="cell czech-crunch-logo">
+							<img src="img/czech-crunch.png">
 						</div>
-						<div class="cell logo-kontentino">
-							<img src="img/logos/kontentino-logo.svg">
+						<div class="cell hn-logo">
+							<img src="img/hospodarske-noviny.png">
 						</div>
-						<div class="cell">
-							<img src="img/logos/queens-logo.svg">
+						<div class="cell idnes-logo">
+							<img src="img/idnes.png">
 						</div>
-						<div class="cell">
-							<img src="img/logos/valossa_black_transp.png">
+						<div class="cell pwc-logo">
+							<img src="img/pwc.svg">
 						</div>
-						<div class="cell">
-							<img src="img/logos/bileto-logo.svg">
+						<div class="cell t-mobile-logo">
+							<img src="img/tmobile.svg">
 						</div>
 					</div>
 
