--- a/index.html
+++ b/index.html
@@ -138,32 +138,25 @@ a textech let tam zdůrazňuje mamut, jinak rané region.</p>
 					<div class="0callout">
 						<h2>Media Coverage</h2>
 
-						<div class="grid-x grid-padding-x small-up-3 medium-up-4 large-up-7 align-spaced align-middle logo-group">
+							<div class="grid-x grid-padding-x small-up-3 medium-up-4 large-up-7 align-spaced align-middle logo-group">
+	-->
+							<div class="cell ct24-logo" style="width: 7em;">
+								<img src="img/ct24.png">
+							</div>
+							<div class="cell czech-crunch-logo" style="width: 10em;">
+								<img src="img/czech-crunch.png">
+							</div>
+							<div class="cell hn-logo" style="width: 10em;">
+								<img src="img/hospodarske-noviny.png">
+							</div>
+							<div class="cell idnes-logo" style="width: 10em;">
+								<img src="img/idnes.png">
+							</div>
+							<div class="cell pwc-logo" style="width: 7em;">
+								<img src="img/pwc.svg">
+							</div>
 
-<!--
-						  <div class="cell logo-csob">
-							<img src="img/logos/csob-logo.svg">
 						</div>
--->
-						<div class="cell ct24-logo">
-							<img src="img/ct24.png">
-						</div>
-						<div class="cell czech-crunch-logo">
-							<img src="img/czech-crunch.png">
-						</div>
-						<div class="cell hn-logo">
-							<img src="img/hospodarske-noviny.png">
-						</div>
-						<div class="cell idnes-logo">
-							<img src="img/idnes.png">
-						</div>
-						<div class="cell pwc-logo">
-							<img src="img/pwc.svg">
-						</div>
-						<div class="cell t-mobile-logo">
-							<img src="img/tmobile.svg">
-						</div>
-					</div>
 
 					</div>
 				</div>
@@ -171,6 +164,23 @@ a textech let tam zdůrazňuje mamut, jinak rané region.</p>
 		</div><!-- grid-container -->
 	</div><!-- block -->	
 
+		
+		
+		
+	<div class="block">
+		<div class="grid-container">
+			<div class="grid-x grid-padding-x">
+				<div class="large-12 cell">
+					<div class="0callout">
+						<h2>Jak to děláme</h2>
+
+						
+
+					</div>
+				</div>
+			</div>
+		</div><!-- grid-container -->
+	</div><!-- block -->
     
 
     <script src="js/vendor/jquery.js"></script>
