correct logos in media coverage

--- a/index.html
+++ b/index.html
@@ -138,22 +138,22 @@ a textech let tam zdůrazňuje mamut, jinak rané region.</p>
 					<div class="0callout">
 						<h2>Media Coverage</h2>
 
-							<div class="grid-x grid-padding-x small-up-3 medium-up-4 large-up-7 align-spaced align-middle logo-group">
-	-->
-							<div class="cell ct24-logo" style="width: 7em;">
+						<div class="grid-x grid-padding-x small-up-3 medium-up-4 large-up-7 align-spaced align-middle logo-group">
+	
+							<div class="cell" style="width: 7em;">
 								<img src="img/ct24.png">
 							</div>
-							<div class="cell czech-crunch-logo" style="width: 10em;">
+							<div class="cell" style="width: 10em;">
 								<img src="img/czech-crunch.png">
 							</div>
-							<div class="cell hn-logo" style="width: 10em;">
+							<div class="cell" style="width: 12em;">
 								<img src="img/hospodarske-noviny.png">
 							</div>
-							<div class="cell idnes-logo" style="width: 10em;">
+							<div class="cell" style="width: 9em;">
 								<img src="img/idnes.png">
 							</div>
-							<div class="cell pwc-logo" style="width: 7em;">
-								<img src="img/pwc.svg">
+							<div class="cell" style="width: 10em;">
+								<img src="img/tyinternety.png">
 							</div>
 
 						</div>
