text adjustments, icons write-down into html

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ a textech let tam zdůrazňuje mamut, jinak rané region.</p>
 
 						<div class="grid-x grid-padding-x">
 							<div class="small-4 cell text-right">
-								<img src="http://via.placeholder.com/150x150">
+								<img src="img/co-ziskate-1.svg">
 							</div>
 							<div class="small-8 cell">
 								<h4>Možnost spolupracovat s naší komunitou na vašich nápadech</h4>
@@ -106,17 +106,17 @@ a textech let tam zdůrazňuje mamut, jinak rané region.</p>
 						
 						<div class="grid-x grid-padding-x">
 							<div class="small-4 cell text-right">
-								<img src="http://via.placeholder.com/150x150">
+								<img src="img/co-ziskate-2.svg">
 							</div>
 							<div class="small-8 cell">
-								<h4>Možnost spolupracovat s naší komunitou na vašich nápadech</h4>
-								<p>Máte nápad a nemáte dostatečnou manpower na jeho exekuci? Chcete využít naší komunity k vyřešení nějaké z vašich challenges?</p>
+								<h4>Být součástí našich akcí</h4>
+								<p>Budete mít volňásky pro vaše zaměstnance, stejně tak možnost obsadit nějaké z křesel - mentor, investor či na rozhovor v rámci StartupGrindu</p>
 							</div>
 						</div>
 						
 						<div class="grid-x grid-padding-x">
 							<div class="small-4 cell text-right">
-								<img src="http://via.placeholder.com/150x150">
+								<img src="img/co-ziskate-3.svg">
 							</div>
 							<div class="small-8 cell">
 								<h4>Zviditelnění vaší značky</h4>
