even more update (jak to mam vubec pojmenovavat?)

--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@ a textech let tam zdůrazňuje mamut, jinak rané region.</p>
 							</div>
                             <div class="small-6 cell">
                                 
-                                <div class="small-6 cell">
-                                    <div class="small-2 cell text-right" style="width: 8em;">
+                                <div class="small-6 cell grid-x grid-padding-x">
+                                    <div class="small-2 cell text-right" style="width: 10em;">
                                         <img src="img/weekend-1.svg">
                                     </div>
                                     <div class="small-4 cell">
@@ -190,8 +190,8 @@ a textech let tam zdůrazňuje mamut, jinak rané region.</p>
                                         <p>Potkat, prezentovat, &amp; tvorba týmu</p>
                                     </div>
                                 </div>
-                                <div class="small-6 cell">
-                                    <div class="small-2 cell text-right" style="width: 8em;">
+                                <div class="small-6 cell grid-x grid-padding-x">
+                                    <div class="small-2 cell text-right" style="width: 10em;">
                                         <img src="img/weekend-2.svg">
                                     </div>
                                     <div class="small-4 cell">
@@ -199,8 +199,8 @@ a textech let tam zdůrazňuje mamut, jinak rané region.</p>
                                         <p>Práce, validování &amp; učení se</p>
                                     </div>
                                 </div>
-                                <div class="small-6 cell">
-                                    <div class="small-2 cell text-right" style="width: 8em;">
+                                <div class="small-6 cell grid-x grid-padding-x">
+                                    <div class="small-2 cell text-right" style="width: 10em;">
                                         <img src="img/weekend-3.svg">
                                     </div>
                                     <div class="small-4 cell">
@@ -232,8 +232,8 @@ a textech let tam zdůrazňuje mamut, jinak rané region.</p>
 							</div>
                             <div class="small-6 cell">
                                 
-                                <div class="small-6 cell">
-                                    <div class="small-2 cell text-right" style="width: 8em;">
+                                <div class="small-6 cell grid-x grid-padding-x">
+                                    <div class="small-2 cell text-right" style="width: 10em;">
                                         <img src="img/grind-1.svg">
                                     </div>
                                     <div class="small-4 cell">
@@ -241,8 +241,8 @@ a textech let tam zdůrazňuje mamut, jinak rané region.</p>
                                         <p>Mentoring &amp; diskuze</p>
                                     </div>
                                 </div>
-                                <div class="small-6 cell">
-                                    <div class="small-2 cell text-right" style="width: 8em;">
+                                <div class="small-6 cell grid-x grid-padding-x">
+                                    <div class="small-2 cell text-right" style="width: 10em;">
                                         <img src="img/grind-2.svg">
                                     </div>
                                     <div class="small-4 cell">
@@ -250,8 +250,8 @@ a textech let tam zdůrazňuje mamut, jinak rané region.</p>
                                         <p>Moderovaná diskuze s hostem</p>
                                     </div>
                                 </div>
-                                <div class="small-6 cell">
-                                    <div class="small-2 cell text-right" style="width: 8em;">
+                                <div class="small-6 cell grid-x grid-padding-x">
+                                    <div class="small-2 cell text-right" style="width: 10em;">
                                         <img src="img/grind-3.svg">
                                     </div>
                                     <div class="small-4 cell">
