--- a/index.html
+++ b/index.html
@@ -318,9 +318,16 @@ a textech let tam zdůrazňuje mamut, jinak rané region.</p>
 								<p>"We were very thrilled to be part of such an amazing event and really appreciated the chance to even actively participate. Seeing the energy and passion for innovation and talented people in action was really inspiring. At Unilever, we always strive to support creative new ideas and entrepreneurship is a part of our DNA and that is why we consider important supporting this kind of events. My colleagues and I really enjoyed the event and we are looking forward to the next one!"</p>
 							</div>
 							<div class="large-4 medium-4 cell">
-								<h4>Slavomír Oslej</h4>
-                                <h4>T-Mobile</h4>
-								<p>"V T-mobile nám záleží na tom, aby bol svet okolo nás lepší. Veríme, že je dôležité, aby sa vytvárali nové myšlienky/inovácie a následne sa šírili medzi čo najväčšie množstvo ľudí. Skvelý priestor, zapálení účastníci, inšpiratívne idey a výborná organizácia – takto vnímame druhý ročník Startup weekend Prague. Veríme, že sa udrží trend a vysoká kvalita podujatia aj do budúcich ročníkov, zároveň držíme palce víťazom v realizovaní ich projektov."</p>
+								<div class="grid-x grid-padding-x">    
+                                    <div class="cell">
+                                        <h4>Slavomír Oslej</h4>
+                                        <h4>T-Mobile</h4>
+                                    </div>
+                                    <div class="cell" style="width: 6em;">
+                                        <img src="img/tmobile.svg">
+                                    </div>
+                                </div>   
+                                <p>"V T-mobile nám záleží na tom, aby bol svet okolo nás lepší. Veríme, že je dôležité, aby sa vytvárali nové myšlienky/inovácie a následne sa šírili medzi čo najväčšie množstvo ľudí. Skvelý priestor, zapálení účastníci, inšpiratívne idey a výborná organizácia – takto vnímame druhý ročník Startup weekend Prague. Veríme, že sa udrží trend a vysoká kvalita podujatia aj do budúcich ročníkov, zároveň držíme palce víťazom v realizovaní ich projektov."</p>
 							</div>
 							<div class="large-4 medium-4 cell">
 								<h4>Radim Brach</h4>
