--- a/index.html
+++ b/index.html
@@ -330,8 +330,15 @@ a textech let tam zdůrazňuje mamut, jinak rané region.</p>
                                 <p>"V T-mobile nám záleží na tom, aby bol svet okolo nás lepší. Veríme, že je dôležité, aby sa vytvárali nové myšlienky/inovácie a následne sa šírili medzi čo najväčšie množstvo ľudí. Skvelý priestor, zapálení účastníci, inšpiratívne idey a výborná organizácia – takto vnímame druhý ročník Startup weekend Prague. Veríme, že sa udrží trend a vysoká kvalita podujatia aj do budúcich ročníkov, zároveň držíme palce víťazom v realizovaní ich projektov."</p>
 							</div>
 							<div class="large-4 medium-4 cell">
-								<h4>Radim Brach</h4>
-                                <h4>PwC</h4>
+                                <div class="grid-x grid-padding-x">    
+                                    <div class="cell">
+                                        <h4>Radim Brach</h4>
+                                        <h4>PwC</h4>
+                                    </div>
+                                    <div class="cell" style="width: 6em;">
+                                        <img src="img/unilever_black.svg">
+                                    </div>
+                                </div>   
 								<p>"Startup Weekend přestavuje skvělou možnost potkat se s lidmi, které zajímají inovace a byznys jako takový.  Víkend plný entusiasmu a nápaditých myšlenek s cílem změnit co se dá. PwC Technology consulting rádo podpořilo tuto akci a vstoupilo tak do startupové komunity v České republice."</p>
 							</div>
 						</div>
