--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@ a textech let tam zdůrazňuje mamut, jinak rané region.</p>
                                         <h4>PwC</h4>
                                     </div>
                                     <div class="cell" style="width: 6em;">
-                                        <img src="img/unilever_black.svg">
+                                        <img src="img/pwc.svg">
                                     </div>
                                 </div>   
 								<p>"Startup Weekend přestavuje skvělou možnost potkat se s lidmi, které zajímají inovace a byznys jako takový.  Víkend plný entusiasmu a nápaditých myšlenek s cílem změnit co se dá. PwC Technology consulting rádo podpořilo tuto akci a vstoupilo tak do startupové komunity v České republice."</p>
