--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
 
-	<div class="block">
+
 		<div class="grid-container">
 			<div class="grid-x grid-padding-x">
 				<div class="large-12 cell">
@@ -43,7 +43,7 @@
 			</div>
 		</div><!-- grid-container -->
 
-
+		<div class="block">
 		<div class="grid-container">
 			<div class="grid-x grid-padding-x">
 				<div class="large-12 cell">
@@ -58,7 +58,7 @@ a textech let tam zdůrazňuje mamut, jinak rané region.</p>
 		</div><!-- grid-container -->
 	</div><!-- block -->
 
-	<div class="block">
+	<div class="block" id="co-delame">
 		<div class="grid-container">
 			<div class="grid-x grid-padding-x">
 				<div class="large-12 cell">
@@ -66,7 +66,7 @@ a textech let tam zdůrazňuje mamut, jinak rané region.</p>
 						<h2>Co děláme a proč to dělat s námi</h2>
 						<p>Dělat překonat choroboplodných, mnohé takže místu než u při zjistil pojmenovali zemědělské dochází ochlazení způsobem i rituál techniky, silou nějaká s jih, ve 1591 domněnku kanadských vliv stejného jinak.</p>
 
-						<div class="grid-x grid-padding-x">
+						<div class="grid-x grid-padding-x call-out">
 							<div class="large-4 medium-4 cell">
 								<h2>15</h2>
 								<p>Akci</p>
