Top nav exploration

--- a/index.html
+++ b/index.html
@@ -13,43 +13,43 @@
 
 <body>
 
+	<div class="top-nav-ribbon">
+		<div class="grid-container">
 
-	<div class="grid-container">
-		<div class="grid-x 0grid-padding-x">
-			<div class="large-12 cell">
-				<div class="title-bar" data-responsive-toggle="example-menu" data-hide-for="medium">
-					<button class="menu-icon" type="button" data-toggle></button>
-					<div class="title-bar-title">Menu</div>
+
+			<div class="grid-x grid-padding-x">
+				<div class="small-12 cell medium-shrink">
+					<h1 class="logo-startovani">Startování</h1>
 				</div>
-				<div class="top-bar" id="top-nav">
-					<div class="top-bar-left">
-						<ul class="dropdown menu" data-dropdown-menu>
-							<li class="menu-text">Startujeme</li>
+				<div class="small-12 cell medium-auto text-right">
+					<img src="img/sw-logo-black.svg" class="logo-startupweekend">
 
-							<li><a href="#0">Co ziskate</a></li>
-							<li><a href="#0">Proc?</a></li>
-							<li><a href="#0">Jak</a></li>
-							<li><a href="#0">Kalendar</a></li>
-							<li><a href="#0">Contakt</a></li>
-						</ul>
-					</div>
-					<div class="top-bar-right">
-						<ul class="menu">
-							<li><img src="img/sw-logo-black.svg"></li>
-							<li><img src="img/sq-logo-black.svg"></li>
-						</ul>
-					</div>
+					<img src="img/sq-logo-black.svg" class="logo-startupgrind">
 				</div>
 			</div>
-		</div>
-	</div>
-	<!-- grid-container -->
 
-	<div class="block">
-		<div class="grid-container">
-			<div class="grid-x grid-padding-x">
-				<div class="large-12 cell">
-					<div class="0callout">
+
+
+			<div>
+
+				<ul class="menu">
+					<li><a href="#0 ">Co získáte</a></li>
+					<li><a href="#0 ">Jak to delame</a></li>
+					<li><a href="#0 ">Kalendar akci</a></li>
+					<li><a href="#0 ">Kontakt</a></li>
+				</ul>
+
+			</div>
+
+		</div>
+		<!-- grid-container -->
+	</div>
+
+	<div class="block ">
+		<div class="grid-container ">
+			<div class="grid-x grid-padding-x ">
+				<div class="large-12 cell ">
+					<div class="0callout ">
 						<h1>Výzva jeden řádek</h1>
 						<p>Krátka rozepsaná výzva. Rozvrstvuje zahladila mě polopotopenou struktur a textech let tam zdůrazňuje mamut, jinak rané region.</p>
 
@@ -61,24 +61,24 @@
 	</div>
 	<!-- block -->
 
-	<div class="block" id="co-delame">
-		<div class="grid-container">
-			<div class="grid-x grid-padding-x">
-				<div class="large-12 cell">
-					<div class="0callout">
+	<div class="block " id="co-delame ">
+		<div class="grid-container ">
+			<div class="grid-x grid-padding-x ">
+				<div class="large-12 cell ">
+					<div class="0callout ">
 						<h2>Co děláme a proč to dělat s námi</h2>
 						<p>Dělat překonat choroboplodných, mnohé takže místu než u při zjistil pojmenovali zemědělské dochází ochlazení způsobem i rituál techniky, silou nějaká s jih, ve 1591 domněnku kanadských vliv stejného jinak.</p>
 
-						<div class="grid-x grid-padding-x call-out">
-							<div class="large-4 medium-4 cell">
+						<div class="grid-x grid-padding-x call-out ">
+							<div class="large-4 medium-4 cell ">
 								<h2>15</h2>
 								<p>Akci</p>
 							</div>
-							<div class="large-4 medium-4 cell">
+							<div class="large-4 medium-4 cell ">
 								<h2>920</h2>
 								<p>ucastniku</p>
 							</div>
-							<div class="large-4 medium-4 cell">
+							<div class="large-4 medium-4 cell ">
 								<h2>5</h2>
 								<p>startupu</p>
 							</div>
@@ -92,40 +92,40 @@
 	</div>
 	<!-- block -->
 
-	<div class="block" id="co-ziskate">
-		<div class="grid-container">
+	<div class="block " id="co-ziskate ">
+		<div class="grid-container ">
 			<h2>Co získáte</h2>
-			<div class="grid-x grid-padding-x">
-				<div class="small-12 large-4 cell">
-					<div class="grid-x grid-padding-x">
-						<div class="shrink large-12 cell">
-							<img src="img/co-ziskate-1.svg" class="illus">
+			<div class="grid-x grid-padding-x ">
+				<div class="small-12 large-4 cell ">
+					<div class="grid-x grid-padding-x ">
+						<div class="shrink large-12 cell ">
+							<img src="img/co-ziskate-1.svg " class="illus ">
 						</div>
-						<div class="auto large-12 cell">
+						<div class="auto large-12 cell ">
 							<h4>Možnost spolupracovat s naší komunitou na vašich nápadech</h4>
 							<p>Máte nápad a nemáte dostatečnou manpower na jeho exekuci? Chcete využít naší komunity k vyřešení nějaké z vašich challenges?</p>
 						</div>
 					</div>
 				</div>
 
-				<div class=" small-12 large-4 cell">
-					<div class="grid-x grid-padding-x">
-						<div class="shrink large-12 cell">
-							<img src="img/co-ziskate-2.svg" class="illus">
+				<div class=" small-12 large-4 cell ">
+					<div class="grid-x grid-padding-x ">
+						<div class="shrink large-12 cell ">
+							<img src="img/co-ziskate-2.svg " class="illus ">
 						</div>
-						<div class="auto large-12 cell">
+						<div class="auto large-12 cell ">
 							<h4>Být součástí našich akcí</h4>
 							<p>Budete mít volňásky pro vaše zaměstnance, stejně tak možnost obsadit nějaké z křesel - mentor, investor či na rozhovor v rámci StartupGrindu</p>
 						</div>
 					</div>
 				</div>
 
-				<div class="small-12 large-4 cell">
-					<div class="grid-x grid-padding-x">
-						<div class="shrink large-12 cell">
-							<img src="img/co-ziskate-3.svg" class="illus">
+				<div class="small-12 large-4 cell ">
+					<div class="grid-x grid-padding-x ">
+						<div class="shrink large-12 cell ">
+							<img src="img/co-ziskate-3.svg " class="illus ">
 						</div>
-						<div class="auto large-12 cell">
+						<div class="auto large-12 cell ">
 							<h4>Zviditelnění vaší značky</h4>
 							<p>Rádi o vás napíšeme, tweetneme a zpromujeme skrze naše média.</p>
 						</div>
@@ -141,29 +141,29 @@
 	<!-- block -->
 
 
-	<div class="block">
-		<div class="grid-container">
-			<div class="grid-x grid-padding-x">
-				<div class="large-12 cell">
-					<div class="0callout">
+	<div class="block ">
+		<div class="grid-container ">
+			<div class="grid-x grid-padding-x ">
+				<div class="large-12 cell ">
+					<div class="0callout ">
 						<h2>Media Coverage</h2>
 
-						<div class="grid-x grid-padding-x small-up-3 medium-up-4 large-up-7 align-spaced align-middle logo-group">
+						<div class="grid-x grid-padding-x small-up-3 medium-up-4 large-up-7 align-spaced align-middle logo-group ">
 
-							<div class="cell" style="width: 7em;">
-								<img src="img/ct24.png">
+							<div class="cell " style="width: 7em; ">
+								<img src="img/ct24.png ">
 							</div>
-							<div class="cell" style="width: 10em;">
-								<img src="img/czech-crunch.png">
+							<div class="cell " style="width: 10em; ">
+								<img src="img/czech-crunch.png ">
 							</div>
-							<div class="cell" style="width: 12em;">
-								<img src="img/hospodarske-noviny.png">
+							<div class="cell " style="width: 12em; ">
+								<img src="img/hospodarske-noviny.png ">
 							</div>
-							<div class="cell" style="width: 9em;">
-								<img src="img/idnes.png">
+							<div class="cell " style="width: 9em; ">
+								<img src="img/idnes.png ">
 							</div>
-							<div class="cell" style="width: 10em;">
-								<img src="img/tyinternety.png">
+							<div class="cell " style="width: 10em; ">
+								<img src="img/tyinternety.png ">
 							</div>
 
 						</div>
@@ -179,43 +179,43 @@
 
 
 
-	<div class="block">
-		<div class="grid-container">
-			<div class="grid-x grid-padding-x">
-				<div class="large-12 cell">
-					<div class="0callout">
+	<div class="block ">
+		<div class="grid-container ">
+			<div class="grid-x grid-padding-x ">
+				<div class="large-12 cell ">
+					<div class="0callout ">
 						<h2>Jak to děláme</h2>
 
-						<div class="grid-x grid-padding-x">
-							<div class="small-6 cell">
+						<div class="grid-x grid-padding-x ">
+							<div class="small-6 cell ">
 								<h3>Organizujeme Startup weekendy</h3>
 								<p>Naší úlohou je pomoci lidem při prvním kroku stavby digitální produkty - dát dohromady, designéry, vývojáře a marketéry, poskytnout jim nástroje, veškeré zázemí a mentoring. Tak, aby měli po víkendu odvahu, kontakty a podporu k další nesnadné práci.</p>
 							</div>
-							<div class="small-6 cell">
+							<div class="small-6 cell ">
 
-								<div class="small-6 cell grid-x grid-padding-x">
-									<div class="small-2 cell text-right" style="width: 10em;">
-										<img src="img/weekend-1.svg">
+								<div class="small-6 cell grid-x grid-padding-x ">
+									<div class="small-2 cell text-right " style="width: 10em; ">
+										<img src="img/weekend-1.svg ">
 									</div>
-									<div class="small-4 cell">
+									<div class="small-4 cell ">
 										<h4>Den 1</h4>
 										<p>Potkat, prezentovat, &amp; tvorba týmu</p>
 									</div>
 								</div>
-								<div class="small-6 cell grid-x grid-padding-x">
-									<div class="small-2 cell text-right" style="width: 10em;">
-										<img src="img/weekend-2.svg">
+								<div class="small-6 cell grid-x grid-padding-x ">
+									<div class="small-2 cell text-right " style="width: 10em; ">
+										<img src="img/weekend-2.svg ">
 									</div>
-									<div class="small-4 cell">
+									<div class="small-4 cell ">
 										<h4>Den 2</h4>
 										<p>Práce, validování &amp; učení se</p>
 									</div>
 								</div>
-								<div class="small-6 cell grid-x grid-padding-x">
-									<div class="small-2 cell text-right" style="width: 10em;">
-										<img src="img/weekend-3.svg">
+								<div class="small-6 cell grid-x grid-padding-x ">
+									<div class="small-2 cell text-right " style="width: 10em; ">
+										<img src="img/weekend-3.svg ">
 									</div>
-									<div class="small-4 cell">
+									<div class="small-4 cell ">
 										<h4>Den 3</h4>
 										<p>Práce, prezentování &amp; oslava</p>
 									</div>
@@ -233,42 +233,42 @@
 	<!-- block -->
 
 
-	<div class="block">
-		<div class="grid-container">
-			<div class="grid-x grid-padding-x">
-				<div class="large-12 cell">
-					<div class="0callout">
+	<div class="block ">
+		<div class="grid-container ">
+			<div class="grid-x grid-padding-x ">
+				<div class="large-12 cell ">
+					<div class="0callout ">
 
-						<div class="grid-x grid-padding-x">
-							<div class="small-6 cell">
+						<div class="grid-x grid-padding-x ">
+							<div class="small-6 cell ">
 								<h3>Pořádáme měsíčně Startup Grind</h3>
 								<p>Startup Grind je největší startup komunita na světě. Cílem Startup Grindu je vzdělávat, inspirovat a propojovat lokální podnikatele. Jednou měsíčně si na akci zveme úspěšné podnikatele, se kterými vedeme moderovanou diskuzi (tzv. fireside chat) o jejich podnikatelské cestě.</p>
 							</div>
-							<div class="small-6 cell">
+							<div class="small-6 cell ">
 
-								<div class="small-6 cell grid-x grid-padding-x">
-									<div class="small-2 cell text-right" style="width: 10em;">
-										<img src="img/grind-1.svg">
+								<div class="small-6 cell grid-x grid-padding-x ">
+									<div class="small-2 cell text-right " style="width: 10em; ">
+										<img src="img/grind-1.svg ">
 									</div>
-									<div class="small-4 cell">
+									<div class="small-4 cell ">
 										<h4>Inspirace</h4>
 										<p>Mentoring &amp; diskuze</p>
 									</div>
 								</div>
-								<div class="small-6 cell grid-x grid-padding-x">
-									<div class="small-2 cell text-right" style="width: 10em;">
-										<img src="img/grind-2.svg">
+								<div class="small-6 cell grid-x grid-padding-x ">
+									<div class="small-2 cell text-right " style="width: 10em; ">
+										<img src="img/grind-2.svg ">
 									</div>
-									<div class="small-4 cell">
+									<div class="small-4 cell ">
 										<h4>Vzdělávání</h4>
 										<p>Moderovaná diskuze s hostem</p>
 									</div>
 								</div>
-								<div class="small-6 cell grid-x grid-padding-x">
-									<div class="small-2 cell text-right" style="width: 10em;">
-										<img src="img/grind-3.svg">
+								<div class="small-6 cell grid-x grid-padding-x ">
+									<div class="small-2 cell text-right " style="width: 10em; ">
+										<img src="img/grind-3.svg ">
 									</div>
-									<div class="small-4 cell">
+									<div class="small-4 cell ">
 										<h4>Propojování</h4>
 										<p>Seznamování &amp; diskuze</p>
 									</div>
@@ -285,11 +285,11 @@
 		<!-- block -->
 
 
-		<div class="block">
-			<div class="grid-container">
-				<div class="grid-x grid-padding-x">
-					<div class="large-12 cell">
-						<div class="0callout">
+		<div class="block ">
+			<div class="grid-container ">
+				<div class="grid-x grid-padding-x ">
+					<div class="large-12 cell ">
+						<div class="0callout ">
 							<h3>Neustále pracujeme s komunitou</h3>
 							<p>Přesto výkyvy zooložka objeven polonica nahlíží navštívit vhodná příjezdu stávajících, rozbuška však zvané severněji trubek, vedou 1 pomalu kritické šest kataklyzmatickou jistotou o zimě indy.</p>
 
@@ -302,11 +302,11 @@
 		<!-- block -->
 
 
-		<div class="block">
-			<div class="grid-container">
-				<div class="grid-x grid-padding-x">
-					<div class="large-12 cell">
-						<div class="0callout">
+		<div class="block ">
+			<div class="grid-container ">
+				<div class="grid-x grid-padding-x ">
+					<div class="large-12 cell ">
+						<div class="0callout ">
 							<h2>Kalendář akcí</h2>
 						</div>
 					</div>
@@ -317,58 +317,58 @@
 		<!-- block -->
 
 
-		<div class="block">
-			<div class="grid-container">
-				<div class="grid-x grid-padding-x">
-					<div class="large-12 cell">
-						<div class="0callout">
+		<div class="block ">
+			<div class="grid-container ">
+				<div class="grid-x grid-padding-x ">
+					<div class="large-12 cell ">
+						<div class="0callout ">
 							<h2>Podpořili nás</h2>
 
-							<div class="grid-x grid-padding-x">
-								<div class="large-4 medium-4 cell">
-									<div class="cell" style="width: 6em;">
-										<img src="img/zuzana-kutkova.png">
+							<div class="grid-x grid-padding-x ">
+								<div class="large-4 medium-4 cell ">
+									<div class="cell " style="width: 6em; ">
+										<img src="img/zuzana-kutkova.png ">
 									</div>
-									<div class="grid-x grid-padding-x">
-										<div class="cell">
+									<div class="grid-x grid-padding-x ">
+										<div class="cell ">
 											<h4>Zuzana Kutková</h4>
 											<h4>Unilever</h4>
 										</div>
-										<div class="cell" style="width: 6em;">
-											<img src="img/unilever_black.svg">
+										<div class="cell " style="width: 6em; ">
+											<img src="img/unilever_black.svg ">
 										</div>
 									</div>
-									<p>"We were very thrilled to be part of such an amazing event and really appreciated the chance to even actively participate. Seeing the energy and passion for innovation and talented people in action was really inspiring. At Unilever, we always strive to support creative new ideas and entrepreneurship is a part of our DNA and that is why we consider important supporting this kind of events. My colleagues and I really enjoyed the event and we are looking forward to the next one!"</p>
+									<p>"We were very thrilled to be part of such an amazing event and really appreciated the chance to even actively participate. Seeing the energy and passion for innovation and talented people in action was really inspiring. At Unilever, we always strive to support creative new ideas and entrepreneurship is a part of our DNA and that is why we consider important supporting this kind of events. My colleagues and I really enjoyed the event and we are looking forward to the next one! "</p>
 								</div>
-								<div class="large-4 medium-4 cell">
-									<div class="cell" style="width: 6em;">
-										<img src="img/slavomir-oslej.png">
+								<div class="large-4 medium-4 cell ">
+									<div class="cell " style="width: 6em; ">
+										<img src="img/slavomir-oslej.png ">
 									</div>
-									<div class="grid-x grid-padding-x">
-										<div class="cell">
+									<div class="grid-x grid-padding-x ">
+										<div class="cell ">
 											<h4>Slavomír Oslej</h4>
 											<h4>T-Mobile</h4>
 										</div>
-										<div class="cell" style="width: 6em;">
-											<img src="img/tmobile.svg">
+										<div class="cell " style="width: 6em; ">
+											<img src="img/tmobile.svg ">
 										</div>
 									</div>
-									<p>"V T-mobile nám záleží na tom, aby bol svet okolo nás lepší. Veríme, že je dôležité, aby sa vytvárali nové myšlienky/inovácie a následne sa šírili medzi čo najväčšie množstvo ľudí. Skvelý priestor, zapálení účastníci, inšpiratívne idey a výborná organizácia – takto vnímame druhý ročník Startup weekend Prague. Veríme, že sa udrží trend a vysoká kvalita podujatia aj do budúcich ročníkov, zároveň držíme palce víťazom v realizovaní ich projektov."</p>
+									<p>"V T-mobile nám záleží na tom, aby bol svet okolo nás lepší. Veríme, že je dôležité, aby sa vytvárali nové myšlienky/inovácie a následne sa šírili medzi čo najväčšie množstvo ľudí. Skvelý priestor, zapálení účastníci, inšpiratívne idey a výborná organizácia – takto vnímame druhý ročník Startup weekend Prague. Veríme, že sa udrží trend a vysoká kvalita podujatia aj do budúcich ročníkov, zároveň držíme palce víťazom v realizovaní ich projektov. "</p>
 								</div>
-								<div class="large-4 medium-4 cell">
-									<div class="cell" style="width: 6em;">
-										<img src="img/radim-brach.png">
+								<div class="large-4 medium-4 cell ">
+									<div class="cell " style="width: 6em; ">
+										<img src="img/radim-brach.png ">
 									</div>
-									<div class="grid-x grid-padding-x">
-										<div class="cell">
+									<div class="grid-x grid-padding-x ">
+										<div class="cell ">
 											<h4>Radim Brach</h4>
 											<h4>PwC</h4>
 										</div>
-										<div class="cell" style="width: 6em;">
-											<img src="img/pwc.svg">
+										<div class="cell " style="width: 6em; ">
+											<img src="img/pwc.svg ">
 										</div>
 									</div>
-									<p>"Startup Weekend přestavuje skvělou možnost potkat se s lidmi, které zajímají inovace a byznys jako takový. Víkend plný entusiasmu a nápaditých myšlenek s cílem změnit co se dá. PwC Technology consulting rádo podpořilo tuto akci a vstoupilo tak do startupové komunity v České republice."</p>
+									<p>"Startup Weekend přestavuje skvělou možnost potkat se s lidmi, které zajímají inovace a byznys jako takový. Víkend plný entusiasmu a nápaditých myšlenek s cílem změnit co se dá. PwC Technology consulting rádo podpořilo tuto akci a vstoupilo tak do startupové komunity v České republice. "</p>
 								</div>
 							</div>
 
@@ -381,11 +381,11 @@
 		<!-- block -->
 
 
-		<div class="block">
-			<div class="grid-container">
-				<div class="grid-x grid-padding-x">
-					<div class="large-12 cell">
-						<div class="0callout">
+		<div class="block ">
+			<div class="grid-container ">
+				<div class="grid-x grid-padding-x ">
+					<div class="large-12 cell ">
+						<div class="0callout ">
 							<h2>Staňte se součástí startupové scény</h2>
 						</div>
 					</div>
@@ -396,10 +396,10 @@
 		<!-- block -->
 
 
-		<script src="js/vendor/jquery.js"></script>
-		<script src="js/vendor/what-input.js"></script>
-		<script src="js/vendor/foundation.js"></script>
-		<script src="js/app.js"></script>
+		<script src="js/vendor/jquery.js "></script>
+		<script src="js/vendor/what-input.js "></script>
+		<script src="js/vendor/foundation.js "></script>
+		<script src="js/app.js "></script>
 </body>
 
 </html>
