add teaser with video

--- a/index.html
+++ b/index.html
@@ -17,42 +17,60 @@
 		<div class="grid-container">
 
 
-			<div class="grid-x grid-padding-x">
-				<div class="small-12 cell medium-shrink">
+			<div class="grid-x grid-padding-x align-justify align-middle">
+				<div class="small-12 medium-shrink large-shrink align-self-middle cell ">
 					<h1 class="logo-startovani">Startování</h1>
 				</div>
-				<div class="small-12 cell medium-auto text-right">
-					<img src="img/sw-logo-black.svg" class="logo-startupweekend">
 
-					<img src="img/sq-logo-black.svg" class="logo-startupgrind">
+				<div class="small-auto medium-auto large-auto cell ">
+
 				</div>
+
+
+				<div class="small-12 medium-7 large-shrink cell">
+					<div class="logos">
+						<div class="grid-x grid-padding-x ">
+
+							<div class="small-7 cell align-self-middle">
+								<div class="image-wrapper logo-startupweekend ">
+									<img src="img/sw-logo-black.svg" class=" ">
+								</div>
+							</div>
+
+							<div class="small-5 cell align-self-middle">
+								<div class="image-wrapper logo-startupgrind ">
+									<img src="img/sq-logo-black.svg" class="">
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="small-12 cell small-order-3">
+					<ul class="nav-menu">
+						<li><a href="#0 ">Co získáte</a></li>
+						<li><a href="#0 ">Jak to delame</a></li>
+						<li><a href="#0 ">Kalendar akci</a></li>
+						<li><a href="#0 ">Kontakt</a></li>
+					</ul>
+				</div>
+
 			</div>
-
-
-
-			<div>
-
-				<ul class="menu">
-					<li><a href="#0 ">Co získáte</a></li>
-					<li><a href="#0 ">Jak to delame</a></li>
-					<li><a href="#0 ">Kalendar akci</a></li>
-					<li><a href="#0 ">Kontakt</a></li>
-				</ul>
-
-			</div>
-
+			<!-- grid-container -->
 		</div>
-		<!-- grid-container -->
 	</div>
 
-	<div class="block ">
+	<div class="block" id="teaser">
 		<div class="grid-container ">
 			<div class="grid-x grid-padding-x ">
-				<div class="large-12 cell ">
-					<div class="0callout ">
-						<h1>Výzva jeden řádek</h1>
-						<p>Krátka rozepsaná výzva. Rozvrstvuje zahladila mě polopotopenou struktur a textech let tam zdůrazňuje mamut, jinak rané region.</p>
+				<div class="small-12 medium-5 large-4 cell ">
+					<h1>Pojdme to konecne udelat!</h1>
+					<p>Krátka rozepsaná výzva. Rozvrstvuje zahladila mě polopotopenou struktur a textech let tam zdůrazňuje mamut, jinak rané region.</p>
 
+				</div>
+				<div class="small-12 medium-7 large-8 cell ">
+					<div class="responsive-embed widescreen">
+						<iframe width="560" height="315" src="https://www.youtube.com/embed/mqiZVGykNbw" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 					</div>
 				</div>
 			</div>
@@ -65,26 +83,26 @@
 		<div class="grid-container ">
 			<div class="grid-x grid-padding-x ">
 				<div class="large-12 cell ">
-					<div class="0callout ">
-						<h2>Co děláme a proč to dělat s námi</h2>
-						<p>Dělat překonat choroboplodných, mnohé takže místu než u při zjistil pojmenovali zemědělské dochází ochlazení způsobem i rituál techniky, silou nějaká s jih, ve 1591 domněnku kanadských vliv stejného jinak.</p>
 
-						<div class="grid-x grid-padding-x call-out ">
-							<div class="large-4 medium-4 cell ">
-								<h2>15</h2>
-								<p>Akci</p>
-							</div>
-							<div class="large-4 medium-4 cell ">
-								<h2>920</h2>
-								<p>ucastniku</p>
-							</div>
-							<div class="large-4 medium-4 cell ">
-								<h2>5</h2>
-								<p>startupu</p>
-							</div>
+					<h2>Co děláme a proč to dělat s námi</h2>
+					<p>Dělat překonat choroboplodných, mnohé takže místu než u při zjistil pojmenovali zemědělské dochází ochlazení způsobem i rituál techniky, silou nějaká s jih, ve 1591 domněnku kanadských vliv stejného jinak.</p>
+
+					<div class="grid-x grid-padding-x">
+						<div class="large-4 medium-4 cell ">
+							<h2>15</h2>
+							<p>Akci</p>
 						</div>
-
+						<div class="large-4 medium-4 cell ">
+							<h2>920</h2>
+							<p>ucastniku</p>
+						</div>
+						<div class="large-4 medium-4 cell ">
+							<h2>5</h2>
+							<p>startupu</p>
+						</div>
 					</div>
+
+
 				</div>
 			</div>
 		</div>
